# whatsapp_bot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 36385f28ad45_add_selector_and_repeat_interval.py  6a4295545b84_initial_migration.py  9080a8a4fb60_update_is_reminded_delete_repeat_.py  b9e695665c3f_initial_migration.py
infra/: fast_api.Dockerfile
src/: main.py
src/api/: routers.py
src/api/endpoints/: __init__.py  bot.py
src/bot/: bot.py  engine.py  validators.py
src/core/: base.py  config.py  constants.py  database.py  exceptions.py  regex_patterns.py
src/crud/: __init__.py  bot.py
src/models/: __init__.py  bot.py
