[tool.poetry]
name = "whatsapp-bot"
version = "0.1.0"
description = ""
authors = ["Denis <panasenkodf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
twilio = "^9.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-extra-types = "^2.6.0"
asyncpg = "^0.29.0"
phonenumbers = "^8.13.32"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
ngrok = "^1.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
